2003-11-30    <jeff@mini.nerble.net>

	* mapedit/chunklst.cc, etc.: Added a 'delete' option for
	chunks.

2003-11-29    <jeff@mini.nerble.net>

	* usecode/ucinternal.h,intrinsics.cc:  Only force barge to do a
	'gather' when we've actually add/deleted/moved an object.

	* objs/egg.cc (Egg_object): Teleport eggs should not automatically
	reset (unless they have the auto_reset flag).

2003-11-28    <jeff@mini.nerble.net>

	* mapedit/npcedit.cc: Each schedule line now has a "Game" entry
	that sets the location from where the Avatar is standing.

2003-11-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* cheat_screen.cc: don't show unimplemented options

2003-11-12  Ryan Nunn  <colourles@users.sourceforge.net>
	* tools/u7voice2syx.cc : Small tool that will convert various files 
	  ("u7voice.flx" BG, "u7intro.tim" BG, and "mainmenu.tim" SI) into syx 
	  (SysEx) format files for people with MT32s. For everyone else these 
	  files are kinda useless. Doesn't do anything with the XMIDI.MT files
	  which are used for the BG endgame xmis, and the SI intro, in game and
	  endgame xmis.

2003-11-09  Ryan Nunn  <colourles@users.sourceforge.net>
	* exultmenu.cc, gamewin.cc, audio/Midi.*, audio/xmidi.*,
	  gumps/AudioOptions_gump.* : 
	  
	  Removing the, IMO horrible, hack to the XMIDI convert types to 
	  support OGG and FMSynth Midi drivers. 
	  
	  Added a separate setting that can be used to select which driver you 
	  want. Config key is "config/audio/midi/driver". Current settings are 
	  "normal", "digital" and "fmsynth" (if compiled in). 
	  
	  Gumps and menus modified to reflect the changes. It is no longer 
	  possible to change midi driver in Exult menu, you must use the Audio 
	  Options Gump.
	  
	  Changing midi driver is now immediate. Restarting Exult is no longer 
	  required if you switch to or from the Ogg or FMSynth drivers. 
	  
	  These changes are just the beginning... after 1.1 has gone final, I 